-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
-bug#0001926: Importing templates "using defaults for this installation" associates all rra's defined 
-bug#0001934: Poller sig_handler Bug
-bug: accept "Connection refused" on TCP ping tests
-bug: add missing row selection to graph preview
-bug: script server throws "undefined variable" error when in debug mode
-bug: Removing graphs was not taking advantage of bulk deletes causing major slowdowns
-bug: Add some command escaping
-bug: Change default font sizes
-bug: fixing issues with multiple "U" results for data input methods with multiple output parms
-bug: when using template and search filter on graph management, sql error occurs
-feature#0001922: Reindex method "Index Count Changed" requires that OID_NUM_INDEXES is given for SNMP Data Queries
-feature#0001923: Implement counting for script (server) data queries just like OID_NUM_INDEXES
-feature#0001924: Allow for reindex method "Index Count Changed" to apply to script (server) queries as well
-feature: Make reindexing and repopulating the poller cache a lossless process, reduce time to index by 66%


0.8.7g
-bug: RRDTool 1.4.x not recognized during installation
-bug: Implement windows-aware shell escaping
-bug: Fixed multiple cross site scripting vulnerabilities reported by Tomas Hoger of the Red Hat Security Response Team
-bug#0001292: Over 8TByte Partition in Windows cant get correct data from snmp 
-bug#0001486: Unable to login after redirection to access denied page
-bug#0001516: "Show the page that user pointed their browser" does not seem to work
-bug#0001561: Over zelous HTML excaping on filter strings