@@ -39,12 +39,17 @@ input_validate_input_number(get_request_var("local_graph_id"));
 input_validate_input_number(get_request_var("rra_id"));
 /* ==================================================== */
 
+if (!is_numeric(get_request_var("local_graph_id"))) {
+	die_html_input_error();
+}
+
 #header("Content-type: image/png");
 /* print correct header */
 $image_format_id = db_fetch_cell("SELECT
 		graph_templates_graph.image_format_id
 		FROM graph_templates_graph
 		WHERE graph_templates_graph.local_graph_id=" . $_GET["local_graph_id"]);
+
 if ($image_format_id == IMAGE_TYPE_PNG) {
 	header("Content-type: image/png");
 } else if ($image_format_id == IMAGE_TYPE_GIF) {
