@@ -12,7 +12,8 @@ SVN
 -bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
 -bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
 -bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
--bug#0001926: Importing templates "using defaults for this installation" associates all rra's defined 
+-bug#0001926: Importing templates "using defaults for this installation" associates all rra's defined
+-bug#0001928: graph_image.php does not check local_graph_id
 -bug#0001934: Poller sig_handler Bug
 -bug: accept "Connection refused" on TCP ping tests
 -bug: add missing row selection to graph preview
